# broker-quickstart

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
config/: config.toml.j2
docs/: laptop-quickstart.md  security-profiles.md
laptop/: __init__.py  advertiser.py  auth.py  bridge.py  broker.py  certs.py  discover.py  mosquitto.conf.j2  profiles.py  run.py  span.py  verify_advertiser.py  verify_handshake.py  verify_loop.py
mdns/: constants.py  publisher.yml.j2
scripts/: laptop-bench.sh
